--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -63,5 +63,17 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>3.3.2</version>
+                <configuration>
+                    <mainClass>ru.practicum.shareit.ShareItGateway</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
