--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -11,8 +11,6 @@
 
     <artifactId>gateway</artifactId>
     <dependencies>
-
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -68,8 +66,10 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>ru.practicum.shareit.ShareItGateway</mainClass>
+                </configuration>
             </plugin>
-
         </plugins>
     </build>
 
