--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -5,7 +5,7 @@ logging.level.org.springframework.transaction=INFO
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=sa
+spring.datasource.password=postgres
 logging.level.org.springframework=ERROR
 logging.level.org.hibernate=ERROR
 logging.level.org.apache=ERROR
