--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,11 +1,14 @@
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:postgresql://db:5432/shareit
+spring.datasource.username=shareit
+spring.datasource.password=shareit
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
+
 logging.level.org.springframework.transaction=INFO
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgres
 logging.level.org.springframework=ERROR
 logging.level.org.hibernate=ERROR
 logging.level.org.apache=ERROR
+
