--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://db:5432/shareit
+spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
 spring.datasource.username=shareit
 spring.datasource.password=shareit
 spring.datasource.driver-class-name=org.postgresql.Driver
