--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -19,8 +19,8 @@ services:
     depends_on:
       - db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/shareit
-      - SPRING_DATASOURCE_USERNAME=shareit
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/shareit
+      - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=shareit
 
   db:
