--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -19,7 +19,7 @@ services:
     depends_on:
       - db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/shareit
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=shareit
 
