--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - "6541:5432"
     environment:
       - POSTGRES_PASSWORD=shareit
-      - POSTGRES_USER=shareit
+      - POSTGRES_USER=postgres
       - POSTGRES_DB=shareit
     healthcheck:
       test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
