--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,14 +1,15 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
-spring.datasource.username=postgres
-spring.datasource.password=shareit
-spring.datasource.driver-class-name=org.postgresql.Driver
-
+server.port=9090
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
-
-logging.level.org.springframework.transaction=INFO
-logging.level.org.springframework=ERROR
-logging.level.org.hibernate=ERROR
-logging.level.org.apache=ERROR
-
+#---
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
+spring.datasource.username=shareit
+spring.datasource.password=shareit
+#---
+spring.config.activate.on-profile=test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:shareit
+spring.datasource.username=shareit
+spring.datasource.password=shareit
